--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
       </a> <a class="item" href="#">
       <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
       </a> <a class="item" href="#">
-      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了</samp></p>
+      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
       </a> <a class="item" href="#">
-      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了</samp></p>
+      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
       </a> <a class="item" href="#">
-      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了</samp></p>
-      </a> <a class="item" href="#">
+      <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
       <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
       </a> <a class="item" href="#">
       <p><i class="iconfont icon-duihuakuang"></i>2020一带一路暨金砖国家技能发展技术创新大赛佛山未来技术技能挑战赛开赛了<samp>2020/11/9</samp></p>
